# agent-house-pm

./: .env.example  .gitignore  Makefile  README.md  _CONTEXT.md  pyproject.toml
bot/: __main__.py  calendar_service.py  commands.py  config.py  db.py  dismiss.py  edit.py  handlers.py  ingestion.py  parser.py  reminders.py  run_reminders.py  scheduler.py  utils.py  webhook_app.py
docs/: CONTEXT.md
docs/adr/: 001-delivery-model.md  002-expiry-reminders.md  003-google-calendar.md  004-deployment.md
docs/superpowers/plans/: 2026-06-20-mvp-improvements.md
docs/superpowers/specs/: 2026-06-20-mvp-improvements-design.md
tests/: test_calendar.py  test_commands.py  test_config.py  test_db.py  test_dismiss.py  test_edge_cases.py  test_edit.py  test_hardening.py  test_ingestion.py  test_parser.py  test_reminders.py  test_schedule_message.py  test_webhook.py
